[gd_scene load_steps=3 format=3 uid="uid://by6mlson3xatu"]

[ext_resource type="Script" uid="uid://b8rwqtsowi0d8" path="res://scenes/test.gd" id="1_bl13t"]
[ext_resource type="PackedScene" uid="uid://belwv3xu53srf" path="res://cards/creature/archer_corin/archer_corin.tscn" id="1_errlg"]

[node name="TestScene" type="Node2D"]
script = ExtResource("1_bl13t")

[node name="CardsContainer" type="Node2D" parent="."]

[node name="ArcherCorin" parent="CardsContainer" instance=ExtResource("1_errlg")]
position = Vector2(147.99998, 181.00002)
scale = Vector2(0.4, 0.4)

[node name="ArcherCorin2" parent="CardsContainer" instance=ExtResource("1_errlg")]
position = Vector2(814, 190)
scale = Vector2(0.4, 0.4)

[node name="Buttons" type="VBoxContainer" parent="."]
offset_left = 434.0
offset_top = 96.0
offset_right = 718.0
offset_bottom = 539.0
theme_override_constants/separation = 70
alignment = 1

[node name="Buttons1" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
alignment = 1

[node name="Attack" type="Button" parent="Buttons/Buttons1"]
layout_mode = 2
text = "Attack -->"

[node name="Special" type="Button" parent="Buttons/Buttons1"]
layout_mode = 2
text = "Special Attack -->"

[node name="Ultimate" type="Button" parent="Buttons/Buttons1"]
layout_mode = 2
text = "Ultimate Attack -->"

[node name="Heal" type="Button" parent="Buttons/Buttons1"]
layout_mode = 2
text = "<--  Heal  card by 10"

[node name="Buttons2" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
alignment = 1

[node name="Attack" type="Button" parent="Buttons/Buttons2"]
layout_mode = 2
text = "<-- Attack"

[node name="Special" type="Button" parent="Buttons/Buttons2"]
layout_mode = 2
text = "<--  Special Attack"

[node name="Ultimate" type="Button" parent="Buttons/Buttons2"]
layout_mode = 2
text = "<--  Ultimate Attack"

[node name="Heal" type="Button" parent="Buttons/Buttons2"]
layout_mode = 2
text = "<--  Heal  card by 10"

[node name="Next_turn" type="Button" parent="Buttons"]
layout_mode = 2
text = "Next turn"

[connection signal="on_creature_is_destroyed" from="CardsContainer/ArcherCorin" to="CardsContainer/ArcherCorin" method="_on_on_creature_is_destroyed"]
[connection signal="on_creature_is_destroyed" from="CardsContainer/ArcherCorin2" to="CardsContainer/ArcherCorin2" method="_on_on_creature_is_destroyed"]
[connection signal="pressed" from="Buttons/Buttons1/Attack" to="." method="on_basic_atk_btn_pressed"]
[connection signal="pressed" from="Buttons/Buttons1/Special" to="." method="on_special_atk_btn_pressed"]
[connection signal="pressed" from="Buttons/Buttons1/Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Buttons/Buttons2/Attack" to="." method="_on_attack_pressed_2"]
[connection signal="pressed" from="Buttons/Buttons2/Special" to="." method="_on_special_pressed_2"]
[connection signal="pressed" from="Buttons/Next_turn" to="." method="on_next_button_btn_pressed"]
